load("@graknlabs_bazel_distribution//maven/templates:rules.bzl", "assemble_maven", "deploy_maven")
load("@rules_java//java:defs.bzl", "java_binary")
load(
    "//:tools.bzl",
    _scala_2_11 = "scala_2_11",
)

scala_library(
    name = "library",
    srcs = glob([
        "main/**/*.scala",
    ]),
    tags = [
        "maven_coordinates=io.ascend:test-harness_%s:{pom_version}" % scala_major,
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//infra/kubespark/spark:environment",
        "//third_party:slf4j_log4j12-runtime",
        "@ascend_guava//:com_google_guava_guava",
    ],
    deps = [
        "//third_party/spark",
    ] + _scala_2_11([
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_json4s_json4s_core_" + scala_rje,
    ]),
)

java_binary(
    name = "test-harness",
    jvm_flags = [
        "--add-exports java.base/jdk.internal.misc=ALL-UNNAMED",
        "-Dio.netty.tryReflectionSetAccessible=true",
    ],
    main_class = "io.spark.function.test_harness.Harness",
    runtime_deps = [
        ":library",
    ],
)

assemble_maven(
    name = "assemble-maven",
    license = "mit",
    package = "{maven_packages}",
    project_description = "Ascend.IO SDK Test Harness",
    project_name = "Ascend.IO SDK Test Harness",
    project_url = "https://github.com/ascend-io/test-harness",
    scm_url = "https://github.com/ascend-io/test-harness.git",
    target = ":library",
    version_file = "//:maven_version",
)

deploy_maven(
    name = "deploy-maven",
    deployment_properties = "deployment.properties",
    target = ":assemble-maven",
)
