load("@rules_java//java:defs.bzl", "java_binary")

"""
bazel build \
  //spark/function/test-harness/example:example_deploy.jar \
  //spark/function/test-harness/example:read \
  //spark/function/test-harness && \
bazel run //spark/function/test-harness/example:read \
  $(git rev-parse --show-toplevel)/spark/function/test-harness/example/rollingsales.csv.gz \
  $(git rev-parse --show-toplevel)/spark/function/test-harness/example/rollingsales.parquet && \
bazel run //spark/function/test-harness \
bash -x $(git rev-parse --show-toplevel)/bazel-bin/spark/function/test-harness/test-harness \
  io.ascend.spark.function.test-harness.example.Example \
  $(git rev-parse --show-toplevel)/bazel-bin/spark/function/test-harness/example/example_deploy.jar \
  $(git rev-parse --show-toplevel)/spark/function/test-harness/example/result.csv \
  $(git rev-parse --show-toplevel)/spark/function/test-harness/example/rollingsales.parquet
"""

"""
bazel build \
  //infra/kubespark/spark:deploy_env_deploy.jar \
  //spark/function/test-harness:test-harness_deploy.jar \
  //spark/function/test-harness/example:example_deploy.jar \
&& \
java \
  -cp $(git rev-parse --show-toplevel)/bazel-bin/infra/kubespark/spark/deploy_env_deploy.jar:$(git rev-parse --show-toplevel)/bazel-bin/spark/function/test-harness/test-harness_deploy.jar \
  -Dio.netty.tryReflectionSetAccessible=true \
  org.apache.spark.deploy.SparkSubmit \
  --class io.spark.function.test_harness.Harness \
  spark-internal \
  io.ascend.spark.function.test_harness.example.Example \
  $(git rev-parse --show-toplevel)/bazel-bin/spark/function/test-harness/example/example_deploy.jar \
  $(git rev-parse --show-toplevel)/spark/function/test-harness/example/result.csv \
  $(git rev-parse --show-toplevel)/spark/function/test-harness/example/rollingsales.parquet
"""

# sudo update-java-alternatives --set  /usr/lib/jvm/java-1.11.0-openjdk-amd64
# sudo update-java-alternatives --set  /usr/lib/jvm/java-1.8.0-openjdk-amd64

"""
(
$(git rev-parse --show-toplevel) &&
bazel build \
  //infra/kubespark/spark:deploy_env_deploy.jar \
  //spark/function/test-harness:test-harness_deploy.jar \
  //spark/function/test-harness/example:example_deploy.jar \
&&
java \
  -cp bazel-bin/infra/kubespark/spark/deploy_env_deploy.jar:bazel-bin/spark/function/test-harness/test-harness_deploy.jar \
  -Dio.netty.tryReflectionSetAccessible=true \
  org.apache.spark.deploy.SparkSubmit \
  --class io.spark.function.test_harness.Harness \
  spark-internal \
  io.ascend.spark.function.test_harness.example.Example \
  bazel-bin/spark/function/test-harness/example/example_deploy.jar \
  spark/function/test-harness/example/result.csv \
  spark/function/test-harness/example/rollingsales.parquet
)
"""

scala_library(
    name = "example_library",
    srcs = [
        "Example.scala",
        "Transaction.scala",
    ],
    deps = [
        "//infra/kubespark/spark:environment",
    ],
)

java_binary(
    name = "example",
    deploy_env = [
        "//infra/kubespark/spark:deploy_env",
    ],
    main_class = "none",
    runtime_deps = [
        ":example_library",
    ],
)

scala_binary(
    name = "read",
    srcs = [
        "Read.scala",
        "Transaction.scala",
    ],
    main_class = "io.ascend.spark.function.test_harness.example.Read",
    runtime_deps = [
        "//infra/kubespark/spark:environment",
        "//third_party:slf4j_log4j12-runtime",
    ],
    deps = [
        "//third_party/spark",
    ],
)

# sbt

"""
(cd $(git rev-parse --show-toplevel)/spark/function/test-harness/example &&
  sbt "runMain io.ascend.spark.function.test_harness.example.Read
    rollingsales.csv.gz
    rollingsales.parquet")
(cd $(git rev-parse --show-toplevel)/spark/function/test-harness/example && \
  sbt "run --class io.spark.function.test_harness.Harness \
    spark-internal \
    io.ascend.spark.function.test_harness.example.Example \
    ./target/scala-2.12/example_2.12-0.1.0-SNAPSHOT.jar \
    result.csv \
    rollingsales.parquet")
"""
